# wingman

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV_LICENSE_SETUP.md  LICENSE  PLAN.md  README.md  SECURITY_FIXES_README.md  STRIPE_SUBSCRIPTION_MANAGEMENT.md  TODO.md  index.html  latest.json.template  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-functions.yml  release.yml  security-audit.yml
.serena/: project.yml
scripts/: README.md  build-release.sh  bump-version.sh  create-changelog-entry.sh  generate-update-manifest.sh  release-interactive.sh  release.sh  setup-signing-key.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  credentials.rs  formatters.rs  github.rs  history.rs  hotkey.rs  lib.rs  license.rs  main.rs  native_clipboard.rs  premium.rs  storage.rs  updater.rs  window.rs
src/components/: AIConfig.tsx  AIPresetConfig.tsx  CustomAIPromptConfig.tsx  CustomAIPromptsPanel.tsx  CustomTransformationsPanel.tsx  DevModeTierSwitcher.tsx  DiffPreviewModal.tsx  DiffReviewModal.tsx  DiffView.tsx  EditorWindow.tsx  GitHubDeviceFlowModal.tsx  GitHubSettings.tsx  HistoryPanel.tsx  IconPicker.tsx  LicenseActivation.tsx  LicenseStatusBanner.tsx  ObsidianConfig.tsx  PremiumFeatureGate.tsx  ProFeatureGate.tsx  PromptOptimizer.tsx  QuickActionsPanel.tsx  RegexPlaygroundPanel.tsx  SettingsPanel.tsx  (+5 more)
supabase/: monitoring-security.sql  schema-premium.sql  schema.sql  security-fixes.sql
website/: index.html  script.js  styles.css  thank-you-premium.html  thank-you.html
(+82 files in other folders)
