[package]
name = "wingman"
version = "1.0.0"
description = "Wingman - Cross-Platform Text Composition Tool"
authors = ["Wingman Contributors"]
license = "MIT"
repository = "https://github.com/csteamengine/wingman"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wingman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
# License system dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10"
base64 = "0.22"
urlencoding = "2.1"
machine-uid = "0.5"
rand = "0.8"
sha2 = "0.10"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel.git", branch = "v2.1" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit.git", branch = "v2" }
cocoa = "0.26"
objc = "0.2"
